# news-summarizer-crewai

./: README.md  main.py  pyproject.toml  requirements.txt
agents/: query_agent.py  response_agent.py  scraper_agent.py
