[project]
name = "news-summarizer-crewai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bs4>=0.0.2",
    "crewai[google-genai]>=0.5.0",
    "feedparser>=6.0.12",
    "pandas>=2.1",
    "pdfplumber>=0.10.0",
    "pytesseract>=0.3.11",
    "python-docx>=0.8.11",
    "requests>=2.31",
    "tqdm>=4.66",
]
